# daily-work-planner

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: tests.yml
daily-work-planner/: AGENTS.md  SKILL.md
daily-work-planner/agents/: openai.yaml
daily-work-planner/assets/: daily_plan_template.md  review_log_template.md
daily-work-planner/references/: memory_rules.md  planning_rules.md  privacy_rules.md  reschedule_rules.md  work_modes.md
daily-work-planner/schemas/: session.schema.json
daily-work-planner/scripts/: checkpoint_session.py  classify_work_mode.py  estimate_profile.py  extract_file_context.py  feasibility_score.py  handoff_session.py  inspect_tasks.py  make_ics.py  make_todo.py  plan_day.py  rank_files.py  report_writer.py  reschedule_session.py  resume_session.py  session_state.py  start_session.py  task_memory.py  update_review_log.py  validate_plan.py
daily_work_planner/: __init__.py  __main__.py
examples/: code-debug-session.md  complete-session-package.md  file-context-extraction.md  pdf-reading-session.md  quick-start-case.md  session-state.md  word-revision-session.md
tests/: test_scripts.py
