[project]
name = "daily-work-planner"
version = "1.2.0"
description = "A file-aware work-session preflight planner for Codex skills."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Daily Work Planner contributors" }
]

[project.scripts]
daily-work-planner = "daily_work_planner.__main__:main"

[tool.setuptools]
packages = ["daily_work_planner"]
